workshop04/mysql-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    name: wordpress-mysql
spec:
  type: ClusterIP
  selector:
    name: wordpress-mysql-po
  ports:
  - port: 3306



---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql-deploy
  labels: 
    name: wordpress-mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wordpress-mysql-po
  template:
    metadata:
      labels:
        name: wordpress-mysql-po
    spec:
      volumes:
      - name: mysql-pvc-vol
        persistentVolumeClaim:
          claimName: mysql-pvc
      containers:
      - name: wordpress-mysql-container
        image: mysql:8.0.29
        volumeMounts:
          - name: mysql-pvc-vol
            mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
