workshop04/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  labels:
    name: wordpress-svc
spec:
  type: LoadBalancer
  selector:
    app: wordpress-po
  ports:
  - port: 8080
    targetPort: 80
