workshop04/wordpress-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  labels:
    name: wordpress-svc
spec:
  type: ClusterIP
  selector:
    name: wordpress-po
  ports:
  - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deploy
  labels: 
    name: wordpress-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wordpress-po 
  template:
    metadata:
      labels:
        name: wordpress-po
    spec:
      containers:
      - name: wordpress-container
        image: wordpress:6.0.0-apache
        ports:
        - containerPort: 80
          name: wordpress-port
        volumeMounts:
          - name: wordpress-persistent-storage
            mountPath: /var/www
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
