workshop04/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ing
  labels:
    name: wordpress-ing
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  rules:
   -  host: acme.com.137.184.251.94.nip.io
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: wordpress-svc
              port: 
                number: 80
